cabal-version: 3.0
name:          turtlet
version:       0.1.0.0
synopsis:
license:       MIT
license-file:  LICENSE
author:        Morrow
maintainer:    themorrowm@gmail.com

executable turtlet
  main-is:            Main.hs
  other-modules:      Wordle
  build-depends:
    , ansi-terminal
    , base                       ^>=4.14
    , colourista
    , containers                 ^>=0.6
    , ghc-typelits-natnormalise  ^>=0.7
    , haskeline
    , text
    , vector                     ^>=0.12
    , vector-sized               ^>=1.5

  default-extensions:
    AllowAmbiguousTypes
    DataKinds
    OverloadedStrings
    ScopedTypeVariables
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  ghc-options:
    -Wall -fplugin GHC.TypeLits.Normalise
    -Wno-unticked-promoted-constructors

  hs-source-dirs:     src
  default-language:   Haskell2010
