cabal-version: 3.0
name:          turtlet
version:       0.1.0.0
synopsis:
license:       MIT
license-file:  LICENSE
author:        Morrow
maintainer:    themorrowm@gmail.com

executable turtlet
  main-is:            Main.hs
  other-modules:      Wordle
  build-depends:
    , ansi-terminal
    , async
    , base                       ^>=4.14
    , colourista
    , containers
    , file-embed
    , ghc-typelits-natnormalise
    , haskeline
    , text
    , vector
    , vector-sized

  default-extensions:
    AllowAmbiguousTypes
    DataKinds
    OverloadedStrings
    ScopedTypeVariables
    StandaloneKindSignatures
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  ghc-options:
    -Wall -fplugin GHC.TypeLits.Normalise
    -Wno-unticked-promoted-constructors

  hs-source-dirs:     src
  default-language:   Haskell2010
