cabal-version: 3.0
name:          wordle-solve
version:       0.1.0.0
synopsis:
license:       MIT
license-file:  LICENSE
author:        Morrow
maintainer:    themorrowm@gmail.com

executable wordle-solve
  main-is:            Main.hs
  other-modules:      Wordle
  build-depends:
    , base                       ^>=4.14
    , bytestring                 ^>=0.10.12
    , containers                 ^>=0.6.5
    , finite-typelits            ^>=0.1.4
    , ghc-typelits-natnormalise  ^>=0.7.6
    , lens                       ^>=5.1
    , microlens                  ^>=0.4.12
    , perfect-vector-shuffle     ^>=0.1.1
    , text                       ^>=2.0
    , unordered-containers       ^>=0.2.16
    , vector                     ^>=0.12.3
    , vector-sized               ^>=1.5.0

  default-extensions:
    AllowAmbiguousTypes
    DataKinds
    OverloadedStrings
    ScopedTypeVariables
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  ghc-options:
    -Wall -fplugin GHC.TypeLits.Normalise
    -Wno-unticked-promoted-constructors

  hs-source-dirs:     src
  default-language:   Haskell2010
